--- a/src/Basic/Exercise_011.html
+++ b/src/Basic/Exercise_011.html
@@ -1,10 +1,12 @@
 <script type="text/javascript">
 	
-	/*Write a JavaScript program to convert temperatures to and from Celsius, Fahrenheit.  
+	/*
+	11. Write a JavaScript program to convert temperatures to and from Celsius, Fahrenheit.  
 	[ Formula : c/5 = (f-32)/9 [ where c = temperature in Celsius and f = temperature in Fahrenheit ] 
 	Expected Output : 
 	60°C is 140 °F
-	45°F is 7.222222222222222°C*/
+	45°F is 7.222222222222222°C
+	*/
   
 	var tempToCelsius = 60;
 	var tempToFahrenheit = 45;
