--- a/src/Basic/Exercise_001.html
+++ b/src/Basic/Exercise_001.html
@@ -1,33 +1,41 @@
-<script type="text/javascript">
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="author" content="Natalia Monsalve">
+		<title>Exercise_001</title>
+	</head>
+	<body>
+		<p><b>1. Write a JavaScript program to display the current day and time in the following format.<br />  
+		&ensp;&ensp;Sample Output :<br /> 
+		&ensp;&ensp;Today is : Tuesday.<br />   
+		&ensp;&ensp;Current time is : 10 PM : 30 : 38</b></p>
+ 
+		<h2>Output:</h2>
 
-    /* 
-    1. Write a JavaScript program to display the current day and time in the following format.  
-       Sample Output : 
-       Today is : Tuesday.   
-       Current time is : 10 PM : 30 : 38 
-    */
+		<script>
+			var today = new Date();
 
-    var today = new Date();
+			var daysOfWeek = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
 
-    var daysOfWeek = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
+			var day = daysOfWeek[today.getDay()];
 
-    var day = daysOfWeek[today.getDay()];
+			var message = document.write("Today is : " + day + "<br />Current time is : " + formatAMPM(today) + " : " + today.getMinutes() + " : " + today.getSeconds());
 
-    var message = document.write("Today is : " + day + "<br />Current time is : " + formatAMPM(today) + " : " + today.getMinutes() + " : " + today.getSeconds());
-
-    function formatAMPM(date) {
-        var hours = date.getHours();
-        if (hours < 12) {
-            ampm = " AM";
-        }
-        else
-            ampm = " PM";
-        if (hours == 0) {
-            hours = 12;
-        }
-        hours = hours % 12;
-        var strTime = hours + ampm;
-        return strTime;
-    }
-
-</script>
+			function formatAMPM(date) {
+				var hours = date.getHours();
+				if (hours < 12) {
+					ampm = " AM";
+				}
+				else
+					ampm = " PM";
+				if (hours == 0) {
+					hours = 12;
+				}
+				hours = hours % 12;
+				var strTime = hours + ampm;
+				return strTime;
+			}
+		</script>
+	</body>
+</html>
