--- a/src/Basic/Exercise_002.html
+++ b/src/Basic/Exercise_002.html
@@ -1,9 +1,15 @@
-<script type="text/javascript">
-
-    /*
-    2. Write a JavaScript program to print the contents of the current window.
-    */
-
-    window.print();  
-  
-</script>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="author" content="Natalia Monsalve">
+		<title>Exercise_002</title>
+	</head>
+	<body>
+		<p><b>2. Write a JavaScript program to print the contents of the current window.</b></p>
+		<h2>Output:</h2>
+		<script>
+			window.print(); 
+		</script>
+	</body>
+</html>
