--- a/src/Basic/Exercise_003.html
+++ b/src/Basic/Exercise_003.html
@@ -1,32 +1,38 @@
-<script type="text/javascript">
-
-    /*
-    3. Write a JavaScript program to get the current date. 
-       Expected Output : 
-       mm-dd-yyyy, mm/dd/yyyy or dd-mm-yyyy, dd/mm/yyyy
-    */
-
-    var today = new Date();  
-    var year = today.getFullYear();
-
-    function getMonth() {
-        var month = today.getMonth() + 1;
-        if (month < 10) {
-            month = '0' + month; 
-        }
-        return month;
-    }
-
-    function getDay() {
-        var day = today.getDate();
-        if (day < 10) {
-            day = '0' + day;
-        }
-        return day;
-    }
-
-    document.write(getMonth() + '-' + getDay() + '-' + year + '<br />');
-    document.write(getDay() + '-' + getMonth() + '-' + year + '<br />');
-    document.write(getDay() + '/' + getMonth() + '/' + year + '<br />');
-
-</script>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="author" content="Natalia Monsalve">
+		<title>Exercise_002</title>
+	</head>
+	<body>
+		<p><b>3. Write a JavaScript program to get the current date.<br /> 
+		&ensp;&ensp;Expected Output :<br />
+		&ensp;&ensp;mm-dd-yyyy, mm/dd/yyyy or dd-mm-yyyy, dd/mm/yyyy</b></p>
+		<h2>Output:</h2>
+		<script>
+			var today = new Date();  
+			var year = today.getFullYear();
+	 
+			function getMonth() {
+				var month = today.getMonth() + 1;
+				if (month < 10) {
+					month = '0' + month; 
+				}
+				return month;
+			}
+	  
+			function getDay() {
+				var day = today.getDate();
+				if (day < 10) {
+					day = '0' + day;
+				}
+				return day;
+			}
+	  
+			document.write(getMonth() + '-' + getDay() + '-' + year + '<br />');
+			document.write(getDay() + '-' + getMonth() + '-' + year + '<br />');
+			document.write(getDay() + '/' + getMonth() + '/' + year + '<br />'); 
+		</script>
+	</body>
+</html>
