--- a/src/Basic/Exercise_006.html
+++ b/src/Basic/Exercise_006.html
@@ -1,25 +1,30 @@
-<script type="text/javascript">
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="author" content="Natalia Monsalve">
+		<title>Exercise_006</title>
+	</head>
+	<body>
+		<p><b>6. Write a JavaScript program to determine whether a given year is a leap year in the Gregorian calendar.</b></p>
+		<h2>Output:</h2>
+		<script>
+			var yearInput = prompt('Enter the year:'); // Result is a string
+  
+			var leapYear = 0; // Start from year 0 which is a leap year
+			var maxYears = 4000; // This can change
 
-    /*
-    6. Write a JavaScript program to determine whether a given year is a leap year in the Gregorian calendar.
-    */
-
-    var yearInput = prompt('Enter the year:'); // Result is a string
-
-    var leapYear = 0; // Start from year 0 which is a leap year
-    var maxYears = 4000; // This can change
-
-    for (var i = 0; i < maxYears; i++) {
-        leapYear = i * 4; 
-        if (yearInput == leapYear) {
-            document.write('Year: ' + yearInput + ' is a leap year.');
-            break;
-        }
-    }
-
-    if (yearInput != leapYear) {
-        document.write('Year: ' + yearInput + ' is not a leap year.');
-    }
- 
-</script>
-
+			for (var i = 0; i < maxYears; i++) {
+				leapYear = i * 4; 
+				if (yearInput == leapYear) {
+					document.write('Year: ' + yearInput + ' is a leap year.');
+					break;
+				}
+			}
+  
+			if (yearInput != leapYear) {
+				document.write('Year: ' + yearInput + ' is not a leap year.');
+			}
+		</script>
+	</body>
+</html>
