--- a/src/Basic/Exercise_001.html
+++ b/src/Basic/Exercise_001.html
@@ -33,7 +33,7 @@
 						hourAmPm = hour + " AM";
 					}
 				}
-				else if (hour > 11) {
+				else {
 					if (hour == 12) {
 						hourAmPm = 12 + " PM";
 					}
