--- a/src/Basic/Exercise_002.html
+++ b/src/Basic/Exercise_002.html
@@ -8,8 +8,13 @@
 	<body>
 		<p><b>2. Write a JavaScript program to print the contents of the current window.</b></p>
 		<h2>Output:</h2>
+    
+		<input type="button" value="Print" onclick="printWindow()">
+    
 		<script>
-			window.print(); 
+			function printWindow() {
+				window.print();
+			}
 		</script>
 	</body>
 </html>
