--- a/src/Basic/Exercise_004.html
+++ b/src/Basic/Exercise_004.html
@@ -6,22 +6,24 @@
 		<title>Exercise_004</title>
 	</head>
 	<body>
-		<p><b>4. Write a JavaScript program to find the area of a triangle where lengths of the three of its sides are 5, 6, 7.</b></p>
+		<p><strong>4. Write a JavaScript program to find the area of a triangle where lengths of the three of its sides are 5, 6, 7.</strong></p>
 		<h2>Output:</h2>
+		<p id="result"></p>
+    
 		<script>
 			var side1 = 5;
 			var side2 = 6;
 			var side3 = 7;
-	  
+
 			function triangleArea(side1, side2, side3) {
 				var perimeter = side1 + side2 + side3;
 				var semiper = perimeter * 0.5;
 				var area = semiper * (semiper - side1) * (semiper - side2) * (semiper - side3); 
 				area = Math.sqrt(area);
-				return Math.round(area);
+				return area;
 			}
-			
-			document.write(triangleArea(side1, side2, side3));
+
+			document.getElementById('result').innerHTML = triangleArea(side1, side2, side3);
 		</script>
 	</body>
 </html>
