--- a/src/Basic/Exercise_006.html
+++ b/src/Basic/Exercise_006.html
@@ -6,24 +6,26 @@
 		<title>Exercise_006</title>
 	</head>
 	<body>
-		<p><b>6. Write a JavaScript program to determine whether a given year is a leap year in the Gregorian calendar.</b></p>
+		<p><strong>6. Write a JavaScript program to determine whether a given year is a leap year in the Gregorian calendar.</strong></p>
 		<h2>Output:</h2>
+		<p id="result"></p>
 		<script>
 			var yearInput = prompt('Enter the year:'); // Result is a string
-  
+
 			var leapYear = 0; // Start from year 0 which is a leap year
 			var maxYears = 4000; // This can change
-
+			var msg = ''; 
+      
 			for (var i = 0; i < maxYears; i++) {
 				leapYear = i * 4; 
 				if (yearInput == leapYear) {
-					document.write('Year: ' + yearInput + ' is a leap year.');
-					break;
+					document.getElementById('result').innerHTML = 'Year: ' + yearInput + ' is a leap year.';
+				break;
 				}
 			}
-  
+
 			if (yearInput != leapYear) {
-				document.write('Year: ' + yearInput + ' is not a leap year.');
+				document.getElementById('result').innerHTML = 'Year: ' + yearInput + ' is not a leap year.';
 			}
 		</script>
 	</body>
