--- a/src/Basic/Exercise_012.html
+++ b/src/Basic/Exercise_012.html
@@ -1,9 +1,16 @@
-<script type="text/javascript">
-    
-    /*
-    12. Write a JavaScript program to get the website URL (loading page). 
-    */
-  
-    document.write(document.URL)
-
-</script>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="author" content="Natalia Monsalve">
+		<title>Exercise_012</title>
+	</head>
+	<body>
+		<p><strong>12. Write a JavaScript program to get the website URL (loading page).</strong></p>
+		<h2>Output:</h2>
+		<p id="result"></p>
+		<script>
+			document.getElementById('result').innerHTML = document.URL;
+		</script>
+	</body>
+</html>
