--- a/Basic/exercise_002.html
+++ b/Basic/exercise_002.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="author" content="Natalia Monsalve">
+		<title>Exercise_002</title>
+	</head>
+	<body>
+		<p><b>2. Write a JavaScript program to print the contents of the current window.</b></p>
+		<h2>Output:</h2>
+    
+		<input type="button" value="Print" onclick="printWindow()">
+    
+		<script>
+			function printWindow() {
+				window.print();
+			}
+		</script>
+	</body>
+</html>
 
