--- a/Basic/Exercise 001/index.html
+++ b/Basic/Exercise 001/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="author" content="Natalia Monsalve">
     <title>JS | Basic | Exercise 001</title>
   </head>
   <body>
